--- a/templates/login.html
+++ b/templates/login.html
@@ -5,19 +5,19 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
-
-    <form method="POST">
-        <label for="email">Email:</label><br>
-        <input type="email" name="email" id="email" placeholder="Digite o seu email" required><br><br>
-
-        <label for="senha">Senha:</label><br>
-        <input type="password" name="senha" id="senha" placeholder="Digite a sua senha" required><br><br>
-
-        <input type="submit" value="Entrar">
+    {% extends 'base.html' %}
+    {% block content %}
+    <h2>Login</h2>
+    <form method="post">
+      <input type="email" name="email" placeholder="Email" required><br>
+      <input type="password" name="senha" placeholder="Senha" required><br>
+      <button type="submit">Entrar</button>
     </form>
-    <a href = {{ url_for('logout') }}>Sair</a>
-
+    <a href="{{ url_for('register') }}">Cadastrar</a> |
+    <a href="{{ url_for('recuperar_senha') }}">Esqueci a senha</a>
+    {% endblock %}
+</body>
+</html>
     {% if erro %}
         <p style="color:rgb(187, 39, 39);">{{ erro }}</p>
     {% endif %}
