--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,14 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Relier Café</title>
+  <title>{% block title %}Relier Café{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  {% include 'navbar.html' %}
+  {% if not hide_navbar %}
+    {% include 'navbar.html' %}
+  {% endif %}
+  
   <div class="container mt-4">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
