--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ url_for('index') }}">Relier Café</a>
+    <a class="navbar-brand" href="{{ url_for('painel') }}">Relier Café</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="{{ url_for('perfil') }}">Perfil</a></li>
@@ -10,6 +10,7 @@
         {% endif %}
         {% if current_user.is_authenticated and current_user.categoria == 'gerente' %}
           <li class="nav-item"><a class="nav-link" href="{{ url_for('relatorios') }}">Relatórios</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('listar_funcionarios') }}">Funcionários</a></li>
         {% endif %}
       </ul>
       <ul class="navbar-nav">
