--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,7 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+h2 {
+    font-family: Arial, sans-serif;
+    color: #333;
+    margin-bottom: 15px;
+  }
+
+  /* Caixa do perfil */
+  .perfil {
+    background-color: #fff;
+    padding: 15px 20px;
+    border-radius: 6px;
+    box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
+    list-style: none;
+    max-width: 400px;
+  }
+
+  .perfil li {
+    padding: 8px 0;
+    border-bottom: 1px solid #eee;
+    font-size: 16px;
+    color: #555;
+  }
+
+  
+</style>
 <h2>Perfil</h2>
-<ul>
+<ul class="perfil">
   <li>Nome: {{ funcionario.nome }}</li>
   <li>Email: {{ funcionario.email }}</li>
   <li>Telefone: {{ funcionario.telefone }}</li>
