--- a/templates/login.html
+++ b/templates/login.html
@@ -66,8 +66,7 @@
         </form>
         
         <div class="links mt-3">
-            <a href="{{ url_for('cadastro') }}">Cadastrar</a> | 
-            <a href="{{ url_for('recuperar_senha') }}">Esqueci a senha</a>
+            <a href="{{ url_for('cadastro') }}">Cadastrar</a>
         </div>
     </div>
 </body>
