--- a/templates/relatorios.html
+++ b/templates/relatorios.html
@@ -1,5 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+  h2, h3 {
+    font-family: Arial, sans-serif;
+    color: #333;
+    margin-bottom: 10px;
+    margin-top: 20px;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
+  }
+
+  th, td {
+    padding: 10px 12px;
+    text-align: left;
+  }
+
+  th {
+    background-color: #af6f4c;
+    color: white;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+
+  tr:hover {
+    background-color: #f1f1f1;
+  }
+</style>
 <h2>Relatórios Mensais</h2>
 <h3>Renda</h3>
 <table>
