--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,11 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('alternar_tema') }}">
+            🌓 Tema ({{ request.cookies.get('tema', 'claro') }})
+          </a>
+        </li>
       </ul>
     </div>
   </div>
