--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="tema-{{ request.cookies.get('tema', 'claro') }}">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Relier Café{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-
-    .tema-claro body {
-      background-color: #f8f9fa;
-    }
-    .tema-claro .navbar {
-      background-color: #343a40;
-    }
-
-    .tema-escuro body {
-      background-color: #333;
-      color: #fff;
-    }
-    .tema-escuro .navbar {
-      background-color: #222;
-    }
-    .tema-escuro .card {
-      background-color: #444;
-      color: #fff;
-    }
-  </style>
 </head>
 <body>
   {% if not hide_navbar %}
